<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MusicLibraryActivity">

    <!-- Tiêu đề "Your Library" với biểu tượng tìm kiếm -->

    <!-- Biểu tượng tìm kiếm -->

    <TextView
        android:id="@+id/tv_library_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/your_library"
        android:textColor="@color/teal_200"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Nút "Add New Playlist" -->

    <ImageView
        android:id="@+id/iv_library_search"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:contentDescription="@string/search_icon"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_library_title"
        app:tint="@color/white" />

    <!-- Nút "Your Liked Songs" -->
    <LinearLayout
        android:id="@+id/btn_library_add_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_library_title">

        <!-- FrameLayout để chứa cả hình tròn và icon -->
        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical">

            <!-- Hình tròn nền -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img"
                android:scaleType="fitCenter"
                android:contentDescription="Circle Image" />

            <!-- Icon dấu cộng -->
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add"
                app:tint="@color/white"
                android:contentDescription="@string/add_playlist_icon" />
        </FrameLayout>

        <!-- Text "Add New Playlist" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/add_playlist"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Recently Played -->

    <!-- Danh sách bài hát -->

    <LinearLayout
        android:id="@+id/btn_library_liked_songs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_library_add_playlist">

        <!-- FrameLayout chứa hình tròn + icon -->
        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical">

            <!-- Hình tròn nền -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img"
                android:scaleType="fitCenter"
                android:contentDescription="Circle Image" />

            <!-- Icon trái tim -->
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_heart"
                app:tint="@color/white"
                android:contentDescription="@string/liked_songs_icon" />
        </FrameLayout>


        <!-- Text "Your Liked Songs" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/liked_songs"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_sort"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/sort"
        android:contentDescription="@string/sort_icon"
        app:tint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_library_recently_played"/>


    <TextView
        android:id="@+id/tv_library_recently_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/recently_played"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_library_liked_songs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_library_recently_played"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
